# sev3rance-auth-templates

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: automated-checks.yml
sev3rance_auth_templates/: __init__.py  apps.py  context_processors.py
sev3rance_auth_templates/locale/de/LC_MESSAGES/: django.mo  django.po
sev3rance_auth_templates/locale/es/LC_MESSAGES/: django.po
sev3rance_auth_templates/locale/fr_FR/LC_MESSAGES/: django.po
sev3rance_auth_templates/locale/it_IT/LC_MESSAGES/: django.po
sev3rance_auth_templates/locale/ja/LC_MESSAGES/: django.po
sev3rance_auth_templates/locale/ru/LC_MESSAGES/: django.mo  django.po
sev3rance_auth_templates/locale/uk/LC_MESSAGES/: django.mo
sev3rance_auth_templates/locale/zh_Hans/LC_MESSAGES/: django.po
sev3rance_auth_templates/static/sev3rance_auth_templates/css/: community-apps-fixes.css  community-apps-fixes.min.css  community-apps-fixes.min.css.map  sev3rance.css  sev3rance.min.css  sev3rance.min.css.map
sev3rance_auth_templates/static/sev3rance_auth_templates/favicons/: README.md  (+3 more)
sev3rance_auth_templates/templates/allianceauth/: base.html  icons.html  severance-menu-top.html  top-menu-character-dropdown.html  top-menu-user-dropdown.html  top-menu.html
sev3rance_auth_templates/templates/fittings/: add_doctrine.html  add_fit.html  base.html  create_category.html  dashboard.html  edit_category.html  edit_doctrine.html  edit_fit.html  view_all_categories.html  view_all_fits.html  view_category.html  view_doctrine.html  view_fit.html
sev3rance_auth_templates/templates/mumbletemps/: index.html  link.html
testauth/: local.py  settings.py  settings_aa3x.py
(+3 files in other folders)
