[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sev3rance-auth-templates"
version = "1.6.0"
description = "Sev3rance Template Overrides for Alliance Auth"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "~=3.8"
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
]
keywords = [
    "allianceauth",
    "eveonline",
    "sev3rance",
    "template",
    "template_override",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "allianceauth>=3.6.1",
]

[project.urls]
Changelog = "https://github.com/sev3rance/sev3rance-auth-templates/blob/master/CHANGELOG.md"
Documentation = "https://github.com/sev3rance/sev3rance-auth-templates/blob/master/README.md"
Donations = "https://ko-fi.com/ppfeufer"
Homepage = "https://github.com/sev3rance/sev3rance-auth-templates"
Source = "https://github.com/sev3rance/sev3rance-auth-templates.git"
Tracker = "https://github.com/sev3rance/sev3rance-auth-templates/issues"

[tool.hatch.build]
include = [
    "/sev3rance_auth_templates",
]
